Make sure dashboard is fully visible

--- a/resources/assets/sass/_profile.scss
+++ b/resources/assets/sass/_profile.scss
@@ -56,7 +56,7 @@
 .profile-content {
   background-color: $secondary-bg-color;
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 50px;
   box-shadow: $drop-shadow;
 
   h3 {
